--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ header {
   background-repeat: no-repeat;
   background-color: rgb(255, 255, 255);
   background-size: 100%;
-  height: 780px;
+  height: 100vh;
   width: 100%;
   position: fixed;
   top: 0;
@@ -30,7 +30,7 @@ header {
   height: 2020px;
   width: 100%;
   position: relative;
-  margin-top: 755px;
+  margin-top: 100vh;
   z-index: 2;
 }
 
