--- a/src/index.css
+++ b/src/index.css
@@ -124,7 +124,6 @@ footer a {
 
 .project-collection {
   height: 410px;
-  width: 1050px;
   margin: auto;
 }
 
@@ -162,8 +161,9 @@ footer a {
   font-family: Arial, Helvetica;
   background-repeat: no-repeat;
   background-size: cover;
-  min-width: 300px;
   height: 100%;
+  min-height: 400px;
+  min-width: 400px;
   position: relative;
   color: rgba(255, 255, 255, 1);
 }
