--- a/src/index.css
+++ b/src/index.css
@@ -162,8 +162,7 @@ footer a {
   background-repeat: no-repeat;
   background-size: cover;
   height: 100%;
-  min-height: 400px;
-  min-width: 400px;
+  min-width: 300px;
   position: relative;
   color: rgba(255, 255, 255, 1);
 }
@@ -880,6 +879,7 @@ footer a {
 
   .project-collection {
     width: 100%;
+    width: 1050px;
     height: 400px;
   }
 
